# rust-wordle-solver

./: Cargo.toml  README.md  rustfmt.toml  words-1.txt  words-knuth.txt  words-linux-dict.txt  words.txt
src/: main.rs
