[package]
name = "wordle-solver"
version = "0.1.0"
authors = ["Gjorgji Kjosev <gorgi.kosev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "^0.10.3"
clap = { version = "^3.0.7", features = ["derive"] }
rayon = "^1.5.1"